--- a/css/feedback.css
+++ b/css/feedback.css
@@ -1,10 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-body{
-    background-image: url("assets/parallax/sky.png");
-    background-color: #222e44;
-}
-
 /*.body_feedback {*/
 /*    text-align: center;*/
 /*    background-color: #000000;*/
@@ -17,10 +12,14 @@ body{
 
 
 body {
-    background-image: url("assets/parallax/sky.png");
-    background-color: #222e44; /* Fallback color in case the image doesn't load */
-    background-size: cover; /* Cover the entire body */
-    background-repeat: no-repeat; /* Prevent the image from repeating */
+    background-image: url("assets/previous/YalaElephant.jpg");
+    background-color: #1c3b2b;
+    background-repeat: no-repeat;
+}
+
+#bg-image{
+
+    padding:100px 0 0 0;
 }
 
 
@@ -30,7 +29,7 @@ body {
 
 .feedback {
     margin: 0 auto;
-    max-width: 600px;
+    max-width: 700px;
     padding: 20px;
     background-color: #fff; /* White background for form */
     border-radius: 10px;
@@ -71,7 +70,8 @@ body {
 
 .center_feedback {
     text-align: center;
-    margin-top: 10px;
+    margin: 10px 0 10px 0;
+    font-size: 20px;
 }
 .select-feedback {
     width: 100%;
@@ -91,6 +91,7 @@ body {
 /* Styling for radio buttons */
 .radio-feedback {
     display: none;
+
 }
 
 
@@ -102,7 +103,10 @@ body {
     color: rgb(255, 255, 255);
     padding: 10px 20px;
     margin: 5px;
-    border-radius: 5px;
+    height: 50px;
+    width: 50px;
+    text-align: center;
+    border-radius: 10px;
     cursor: pointer;
     transition: background-color 0.3s;
 }
