--- a/css/checkoutPage.css
+++ b/css/checkoutPage.css
@@ -1,19 +1,24 @@
-.checkoutLayout {
-    display: grid;
 
+.checkoutLayout {
+    display: block;
+    width: 700px;
     gap: 50px;
     padding: 20px;
+    opacity: 90%;
+}
+.checkoutLayout a{
+    color: white;
 }
 .checkoutLayout .right{
-    background-color: #5358B3;
+    background-color: #3A775D;
     border-radius: 20px;
     padding: 40px;
     color: honeydew;
     box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.65);
+    margin-top: 10px;
+    align-self: center;
 }
-.checkout .list img{
-    height: 70px;
-}
+
 .checkoutLayout .right form{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -21,10 +26,7 @@
     border-bottom: 1px solid lightblue;
     padding-bottom: 20px;
 }
-.checkoutLayout .right .form .group:nth-child(-n+3){
-    grid-column-start: 1;
-    grid-column-end: 3;
-}
+
 .checkoutLayout .form input, .checkoutLayout .form select{
     width: 100%;
     padding: 10px 20px;
@@ -32,13 +34,12 @@
     border-radius: 20px;
     margin-top: 10px;
     border: none;
-    background-color: #6a6fc9;
+    background-color: #5fa284;
+    color: black;
 }
-.checkoutLayout row{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 10px;
+.checkoutLayout .form .group label{
+    display: inline-block;
+    width: 100px;
 }
 .checkoutLayout .row{
     display: flex;
@@ -60,41 +61,19 @@
     color: white;
     background-color: #222e44;
 }
-.returnCart h1{
-    height: 80px;
-}
-.returnCart .list .item img{
-    height: 80px;
-    padding: 10px;
-    border-radius: 20px;
-    border: black;
-}
-.returnCart .item{
-    display: grid;
-    grid-template-columns: 80px 1fr 50px 80px;
-    align-items: center;
-    gap: 20px;
-    margin-bottom: 30px;
-    padding: 0 10px;
-    border-radius: 20px;
-    box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.65);
-
-}
-.returnCart .item .name, .returnCart .item .returnPrice{
-    font-size: x-large;
-    font-weight: bold;
-}
-
 fieldset{
-    border-color: darkslateblue;
-}
-#radio{
-    display: flex;
-    width: 150px;
+    border-color: darkgreen;
 }
 
-.right label{
-    display: inline-block;
-    width: 200px;
+.group {
+    display: flex;
+    align-items: center;  /* Align labels and images vertically */
 }
+
+
+
+.group label img {
+    margin-right: 5px;  /* Add space between image and text */
+}
+
 
