--- a/css/shop.css
+++ b/css/shop.css
@@ -1,146 +1,191 @@
-body {
- background-color: whitesmoke;
-}
+
 a {
-  text-decoration: none;
+    text-decoration: none;
+}
+.quantity{
+    position: inherit;
 }
 .container {
-  width: 1000px;
-  margin: auto;
-  transition: 0.5s;
+
+    width: 1000px;
+    margin: auto;
+    transition: 0.5s;
 }
+
 header {
-  display: grid;
-  grid-template-columns: 1fr 50px;
-  margin-top: 50px;
+    display: grid;
+    grid-template-columns: 1fr 50px;
+    margin-top: 50px;
+
 }
-header .shopping {
-  position: relative;
-  text-align: right;
+.shopping {
+    position: relative;
+    text-align: right;
 }
 header .shopping img {
-  width: 40px;
+    width: 40px;
 }
 header .shopping span {
-
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: white;
-  position: absolute;
-  top: -5px;
-  left: 80%;
-  padding: 3px 10px;
+    background-color: #5fa284;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    position: absolute;
+    top: -5px;
+    left: 80%;
+    padding: 3px 10px;
 }
 .list {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  column-gap: 20px;
-  row-gap: 20px;
-  margin-top: 50px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    column-gap: 0px;
+    row-gap: 20px;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 .list .item {
-  text-align: center;
-  background-color: #6a6fc9;
-  padding: 20px;
-  box-shadow: 0 50px 50px honeydew;
-  letter-spacing: 1px;
+    font-family: "Arial Rounded MT Bold";
+    text-align: center;
+    background-color: white;
+    width: 200px;
+    height: 350px;
+    border-radius: 15px;
+    letter-spacing: 1px;
+
+    box-shadow: 0 10px 20px 0 rgba(7, 41, 19, .1), 0 0 20px 0 rgba(7, 41, 19, .1);
+
+}
+
+.list .title h3{
+    font-size: 18px;
+    text-align: center;
+    font-family: "Montserrat", Helvetica, Arial, sans-serif;
+    margin: auto;
+    color: #1d4408;
+    height: 50px;
+}
+.list .PImage{
+    border: none;
+
 }
 .list .item img {
-  width: 90%;
-  height: 430px;
-  object-fit: cover;
+    width: 200px;
+    height: 200px;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    object-fit: cover;
 }
-.list .item .productTitle {
-  font-weight: bold;
-}
+
+
 .list .item .price {
-  margin: 10px;
+    color: black;
+    margin: 0px;
+    height: 35px;
+    font-family: "Arial Rounded MT Bold", Helvetica, ui-rounded;
+
 }
 .list .item button {
-  background-color: black;
-  color: white;
-  padding: 10px;
-  width: 100%;
+    background-color: #498600;
+    color: white;
+    padding: 10px;
+    width: 80%;
+    border-radius: 10px;
+    border-color: white;
+    box-shadow: none;
 }
 .cart {
-  position: fixed;
-  top: 0;
-  left: 100%;
-  width: 500px;
-  background-color: black;
-  height: 100vh;
-  transition: 0.5s;
+    position: fixed;
+    top: 0;
+    left: 100%;
+    width: 500px;
+    background-image: url("assets/leaf4.jpeg");
+    background-color: black;
+    height: 100vh;
+    transition: 0.5s;
 }
 .cart h1 {
-  color: honeydew;
-  font-weight: 100;
-  margin: 0;
-  padding: 0 20px;
-  height: 80px;
-  display: flex;
-  align-items: center;
+    color: honeydew;
+    font-weight: 100;
+    margin: 0;
+    padding: 0 20px;
+    height: 80px;
+    display: flex;
+    align-items: center;
+    font-family: "Montserrat", Helvetica, Arial, sans-serif, "Imprint MT Shadow";
 }
 .cart .checkout {
-  position: absolute;
-  bottom: 40px;
-  width: 100%;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
+    position: absolute;
+    bottom: 40px;
+    width: 100%;
+    display: grid;
+    /*grid-template-columns: repeat(2, 1fr);*/
 }
 .cart .checkout div {
-  background-color: aliceblue;
-  width: 100%;
-  height: 70px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-weight: bold;
-  cursor: pointer;
+    background-color: aliceblue;
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    cursor: pointer;
 }
-.cart .checkout div:nth-child(2) {
-  background-color: darkolivegreen;
-  color: white;
+.cart .checkout .proceedCheckout {
+    background-color: #498600;
+    font-family: "Arial Rounded MT Bold", serif;
+    color: white;
+    font-weight: bold;
+    height: 50px;
+
 }
 .cart .closeShopping {
-  position: absolute;
-  bottom: 0;
-  background-color: yellow;
-  width: 100%;
-  height: 50px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-weight: bold;
-  cursor: pointer;
+    position: absolute;
+    bottom: 0;
+    background-color: yellow;
+    width: 100%;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    cursor: pointer;
 }
 
 .active .cart {
-  left: calc(100% - 500px);
+    left: calc(100% - 500px);
 }
 .active .container {
-  transform: translateX(-200px);
+    transform: translateX(-200px);
 }
 .listCard li {
-  display: grid;
-  grid-template-columns: 100px repeat(3, 1fr);
-  color: #fff;
-  row-gap: 10px;
+    display: grid;
+    grid-template-columns: 100px repeat(3, 1fr);
+    color: #000;
+    row-gap: 10px;
+    border-radius: 50px;
+    background-color: white;
+    box-shadow: 0 10px 20px 0 rgba(7, 41, 19, .1), 0 0 20px 0 rgba(7, 41, 19, .1);
+    margin: 10px;
+
 }
 .listCard li div {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .listCard li img {
-  width: 90%;
+    width: 100%;
+    padding: 10px;
+    object-fit: cover;
+    border-radius: 60px;
 }
 .listCard li button {
-  background-color: #fff5;
-  border: none;
+    background-color: #fff5;
+    border: none;
 }
 .listCard .count {
-  margin: 0 10px;
+    margin: 0 10px;
 }
