--- a/css/header_&_footer.css
+++ b/css/header_&_footer.css
@@ -102,7 +102,7 @@ footer .footer-left {
 }
 footer .footer-left .footer-nav {
     font-size: 18px;
-    margin: 0 90px 0 90px;
+    margin: 0 20px;
     padding: 25px 50px 50px 50px;
     display: inline-block;
 }
