--- a/css/feedback.css
+++ b/css/feedback.css
@@ -1,18 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-body{
-    background-image: url("assets/parallax/sky.png");
-    background-color: #222e44;
-    color: black;
-}
+
 
 .body_feedback{
     text-align: center;
     color: black;
     background-color: #ffffff;
     background-image: url("assets/parallax/sky.png");
-    /*font-family: "Poppins", sans-serif;*/
-    /*color: #000000;*/
+
 }
 
 
@@ -50,15 +45,8 @@ body{
 
 
 
-/*body {*/
-/*    background-image: url("assets/parallax/sky.png");*/
-/*    background-color: #222e44; !* Fallback color in case the image doesn't load *!*/
-/*    background-size: cover; !* Cover the entire body *!*/
-/*    background-repeat: no-repeat; !* Prevent the image from repeating *!*/
-/*}*/
 
-
-.title_feedback {
+.title {
     color: #000000;
 }
 
@@ -66,13 +54,13 @@ body{
     margin: 0 auto;
     max-width: 600px;
     padding: 20px;
-    background-color: #fff; /* White background for form */
+    background-color: #fff;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Box shadow */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     align-items: center;
 }
 
-.input-field_feedback {
+.input-field {
     width: calc(100% - 20px);
     padding: 10px;
     margin: 5px 0;
@@ -82,8 +70,8 @@ body{
     font-size: 16px;
 }
 
-.submit-button_feedback {
-    background-color: #5dae87; /* Blue submit button */
+.submit {
+    background-color: #5dae87;
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
@@ -94,16 +82,16 @@ body{
     transition: background-color 0.3s;
 }
 
-.submit-button_feedback:hover {
-    background-color: #5dae87; /* Darker blue on hover */
+.submit:hover {
+    background-color: #59ffae;
 }
 
-.label_feedback {
+.label {
     font-weight: bold;
     margin-top: 10px;
 }
 
-.center_feedback {
+.center {
     text-align: center;
     margin-top: 10px;
 }
@@ -115,24 +103,23 @@ body{
     border-radius: 5px;
     box-sizing: border-box;
     font-size: 16px;
-    appearance: none; /* Removes default arrow */
-    background-image: url('data:image/svg+xml;utf8,<svg fill="%23000000" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"/></svg>'); /* Custom arrow */
+    appearance: none;
     background-repeat: no-repeat;
     background-position: right 10px top 50%;
     background-size: 24px auto;
 }
 
-/* Styling for radio buttons */
-.radio-feedback {
+
+.radio {
     display: none;
 }
 
 
 
-/* Styling for labels */
+
 .label-feedback {
     display: inline-block;
-    background-color: #5dae87; /* Blue color for labels */
+    background-color: #5dae87;
     color: rgb(255, 255, 255);
     padding: 10px 20px;
     margin: 5px;
@@ -141,12 +128,27 @@ body{
     transition: background-color 0.3s;
 }
 
-/* Hover effect for labels */
+
 .label-feedback:hover {
-    background-color: #5dae87; /* Darker blue on hover */
+    background-color: #5dae87;
 }
 
-.radio-feedback:checked + .label-feedback {
+.radio:checked + .label-feedback {
     background-color: #98de28;
-    color: white; /* Change text color to white */
+    color: white;
+}
+.cancel {
+    background-color: #f44336;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s;
+}
+
+.cancel:hover {
+    background-color: #d32f2f;
 }
