--- a/css/parallax.css
+++ b/css/parallax.css
@@ -67,7 +67,7 @@ header nav:hover > a:not(:hover) {
     transform: translate(-50%, -50%);
     color: white;
     font-size: 80px;
-    text-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
+    text-shadow: 0 0 4px rgba(0, 0, 0, 0.25);
 }
 
 .about {
